# utoipa-scalar-warpper

./: .gitignore  Cargo.toml  README-ZH.md  README.md  build.rs  package.json  pnpm-lock.yaml
.cargo/: config.toml
examples/: todo.rs
examples/todo-actix/: Cargo.toml
examples/todo-actix/src/: main.rs  todo.rs
examples/todo-axum/: Cargo.toml
examples/todo-axum/src/: main.rs
examples/todo-rocket/: Cargo.toml
examples/todo-rocket/src/: main.rs
src/: actix.rs  axum.rs  lib.rs  rocket.rs
static/: scalar-api-reference.js
xtask/: Cargo.toml  main.rs  task.rs
