[workspace]
resolver = "3"
members = ["examples/todo-actix", "examples/todo-axum", "examples/todo-rocket"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
actix-web = { version = "4.13.0", default-features = false }
axum = { version = "0.8", default-features = false }
http = { version = "1" }
rocket = { version = "0.5", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
utoipa = { version = "5.4.0", default-features = false }
utoipa-scalar-warpper = { version = "0.1.0", path = "", default-features = false }

[package]
name = "utoipa-scalar-warpper"
version.workspace = true
edition.workspace = true
license = "APACHE OR MIT"

[features]
default = []
actix-web = ["dep:actix-web", "maud/actix-web", "utoipa/actix_extras"]
axum = ["dep:axum", "http", "maud/axum", "utoipa/axum_extras"]
rocket = ["dep:rocket", "maud/rocket", "utoipa/rocket_extras"]

[dependencies]
actix-web = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
http = { workspace = true, optional = true }
maud = { version = "0.27" }
rocket = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, features = [
    "macros",
] }

[build-dependencies]
serde_json = { workspace = true }
