[workspace]
resolver = "3"
members = ["examples/todo-actix", "examples/todo-axum", "examples/todo-rocket"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
actix-web = { version = "4.13.0", default-features = false }
axum = { version = "0.8", default-features = false }
http = { version = "1" }
rocket = { version = "0.5", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
utoipa = { version = "5.4.0", default-features = false }
utoipa-scalar-warpper = { version = "0.1.0", path = "", default-features = false }

[package]
name = "utoipa-scalar-warpper"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Scalar for utoipa"
keywords = ["scalar", "openapi", "documentation", "utoipa", "maud"]
repository = "https://github.com/ixmoyren/utoipa-scalar-warpper"

[features]
default = []
actix-web = ["dep:actix-web"]
axum = ["dep:axum", "http"]
rocket = ["dep:rocket"]

[dependencies]
actix-web = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
http = { workspace = true, optional = true }
maud = { version = "0.27" }
rocket = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["macros"] }

[build-dependencies]
serde_json = { workspace = true }
